<resources>
    <string name="app_name">Mycart</string>
    <string name="img_logo">logo image</string>
    <string name="email_hint">Enter your email</string>
    <string name="password_hint">Enter password</string>
    <string name="bt_login_text">Log-in</string>
    <string name="bt_register_text">Register</string>
    <string name="input_name">Enter your name</string>
    <string name="input_surname">Enter your second name</string>
    <string name="input_age">Enter your age</string>
    <string name="alert_registration_tittle">Registred</string>
    <string name="alert_registration_txt">You have been registred successfully</string>
    <string name="error_field">All fields must be completed</string>
    <string name="aler_registration_tittle_fail">Registration failed</string>
    <string name="alert_already_registered">You\'re already registered</string>
    <string name="it_logout">Log-out</string>
    <string name="it_create_cart">Create cart</string>
    <string name="it_my_carts">My carts</string>
    <string name="it_delete_cart">Delete cart</string>
    <string name="it_config_profile">Edit profile</string>
    <string name="it_share">Share</string>
    <string name="it_rate">Rate MyCart</string>
    <string name="close_menu">Close</string>
    <string name="open_menu">Open</string>
    <string name="it_comunicate">Comunicate</string>
    <string name="it_carts">Carts</string>
    <string name="ic_profile">Profile</string>
    <string name="map_description">Charging map</string>
    <string name="homeTitleText">Here are your nearby supermarkets</string>
    <string name="txt_cart">Drop articles here</string>
    <string name="alert_Cart_Saved">Cart Saved Succesfully</string>
    <string name="alert_Cart_Failed">Cart saving failed</string>
    <string name="txtViewCart">This is your Carts list</string>
    <string name="btEditProfile">Edit</string>
    <string name="btSaveEdit">Save</string>
    <string name="toast_editComplete">Profile edited successfully</string>
    <string name="toast_editFailure">Profile edit failed</string>
    <string name="tittle_register">Profile creation</string>
    <string name="error_quantity">Product with quantity 0</string>
    <string name="prod_added">added to your Cart</string>
    <string name="error_fieldComplete">This field must be completed</string>
    <string name="tittle_confirmCart">Confirm cart</string>
    <string name="txt_cartName">Enter a name for your cart</string>
    <string name="txt_noProducts">There is not product in your Cart!!</string>
    <string name="error">Error</string>
    <string name="error_user">Incorrect password or user</string>
    <string name="accept">Accept</string>
    <string name="deleteCart">Want to delete</string>
</resources>