<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:title="@string/it_carts">

        <menu>
            <item
                android:title="@string/it_my_carts"
                android:id="@+id/it_my_carts"
                android:icon="@drawable/ic_baseline_shopping_cart_24"
                android:iconTint="@color/Primary"/>

            <item
                android:title="@string/it_create_cart"
                android:id="@+id/it_create_cart"
                android:icon="@drawable/ic_baseline_add_24"/>


        </menu>

    </item>


    <item android:title="@string/ic_profile">
        <menu>
            <item
                android:title="@string/it_config_profile"
                android:id="@+id/it_edit_profile"
                android:icon="@drawable/ic_baseline_edit_24"/>

            <item
                android:title="@string/it_logout"
                android:id="@+id/it_logout"
                android:icon="@drawable/ic_baseline_close_24"/>
        </menu>
    </item>



    <item android:title="@string/it_comunicate">

        <menu>

            <item
                android:title="@string/it_rate"
                android:id="@+id/it_rate"
                android:icon="@drawable/ic_baseline_star_rate_24"/>

            <item
                android:title="@string/it_share"
                android:id="@+id/it_share"
                android:icon="@drawable/ic_baseline_share_24"/>


        </menu>

    </item>
</menu>