<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context="com.example.mycartfinal.Activities.RegisterActivity">

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="403dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <Space
            android:layout_width="match_parent"
            android:layout_height="30dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <EditText
            android:id="@+id/input_name"
            android:layout_width="372dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:background="@drawable/borde_redondo"
            android:ems="10"
            android:hint="@string/input_name"
            android:inputType="textPersonName"
            android:minHeight="48dp"
            android:textColorHint="#868080" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="30dp" />


        <EditText
            android:id="@+id/input_surname"
            android:layout_width="372dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:background="@drawable/borde_redondo"
            android:ems="10"
            android:hint="@string/input_surname"
            android:inputType="textPersonName"
            android:minHeight="48dp"
            android:textColorHint="#868080" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="30dp" />

        <EditText
            android:id="@+id/input_email_re"
            android:layout_width="372dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:background="@drawable/borde_redondo"
            android:ems="10"
            android:hint="@string/email_hint"
            android:inputType="textEmailAddress"
            android:minHeight="48dp"
            android:textColorHint="#868080"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.708" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="30dp" />

        <EditText
            android:id="@+id/input_password_re"
            android:layout_width="372dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:autofillHints="@string/password_hint"
            android:background="@drawable/borde_redondo"
            android:ems="10"
            android:hint="@string/password_hint"
            android:inputType="textPassword"
            android:minHeight="48dp"
            android:textColorHint="#868080"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.809"
            tools:ignore="SpeakableTextPresentCheck" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="30dp" />

        <EditText
            android:id="@+id/input_age"
            android:layout_width="372dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:background="@drawable/borde_redondo"
            android:ems="10"
            android:hint="@string/input_age"
            android:inputType="number"
            android:minHeight="48dp"
            android:textColorHint="#868080" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="30dp" />

        <Button
            android:id="@+id/bt_register_re"
            android:layout_width="225dp"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:width="50dp"
            android:backgroundTint="#F7BA51"
            android:gravity="center_horizontal|center_vertical"
            android:maxWidth="50dp"
            android:minWidth="50dp"
            android:text="@string/bt_register_text"
            android:textColor="#1B5E20"
            tools:text="@string/bt_register_text" />

    </LinearLayout>

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="78dp"
        android:layout_height="75dp"
        android:indeterminateTint="#F7BA51"
        android:progressBackgroundTint="#F7BA51"
        android:progressTint="#F7BA51"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2" />

</androidx.constraintlayout.widget.ConstraintLayout>